# le-rust

./: .gitignore  snc.md
essais/crpage/: Cargo.toml  index-template.html  scribble.rs  sitedb.csv
essais/draft/: Cargo.toml  wp1.rs  wp2.rs
essais/ezd/: Cargo.toml  README.md
essais/ezd2tei/: Cargo.toml  abel.ezd.txt  abel.xml  ezd2tei
essais/ids-log/: App.js  Cargo.toml  database.db  index.html  login-template.swift  login.html  login.js  overlay-bottom.swift  styles.css  swiftui-scroll-sample.swift
essais/ids-log/json/: manifest.json  save.json
essais/ids-log/sf/: index.html  main.rs  styles.css
essais/ids-log/src/: main.rs  main_crt.rs  main_login.rs  r-api.rs  rserver.rs  search-api.rs
essais/ids-log/swift/: fileinput.playground  navi-overlay-bottom.swift  playlist.swift
essais/ids-log/translate/: App.js  index.html  login.js  main.rs  styles.css
essais/lines/: .Rhistory  13123.ada.pinghook.md  Cargo.toml  pinghook.csv  pinghook.r.csv  regexcheck.R  regexcheck.md
essais/mdh1/: Cargo.toml
essais/mdh1/src/: main.rs  mdh1.rs
essais/mermaid/: 001.rs  002.rs  003.rs  Cargo.toml  input.md  list.md  output.md
essais/pipe-md/: Cargo.toml  check.R  sample.html  sample.md
essais/piper/: Cargo.toml  sample-out.txt  sampleout.txt
essais/ports/: Cargo.toml
essais/render/: Cargo.toml
essais/server/: index.html
essais/spider-dl/: Cargo.toml
essais/url2/: Cargo.toml
essais/urlreq/: Cargo.toml
essais/wproust/: Cargo.toml  maintemp.rs  sample.md
npm/ollama-chat/: package-lock.json  package.json  tsconfig.json
react/: App.tsx
(+49 files in other folders)
