[package]
name = "ids-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
#actix-web = { version = "4.0.1" }
actix-web = "4.10.2"

actix-cors = "0.6.0" 
rusqlite = { version = "0.27.0", features = ["bundled"] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
chrono = "0.4"
