[package]
name = "mdh1"
version = "0.1.0"
edition = "2024"

   [dependencies]
  # clap = { version = "4.0", features = ["derive"] }
  # reqwest = { version = "0.11", features = ["blocking","json"] }
  # serde = { version = "1.0", features = ["derive"] }
  # serde-xml-rs = "0.4"
   pulldown-cmark = "0.8" # For Markdown-to-HTML conversion
  # toml = "0.7"
